load("//bazel_script:create_tags.bzl", "create_tags")

cc_library (
  name = "centralized_threadpool",
  srcs = glob(["centralized/*.cpp"]),
  hdrs = glob(["include/*.hpp"]),
  tags = create_tags(),
  deps = ["//src/data_structure:data_structure", "@com_github_google_glog//:glog"],
  visibility = ["//visibility:public"],
)
